# aravl

./: .env  README.md  TODO  deploy.sh  docker-compose.yml
microservices/: Cargo.toml
microservices/_qazvin_megaforce_microservice/: .env  Cargo.toml  README.md
microservices/_qazvin_megaforce_microservice/src/: handlers.rs  main.rs  utils.rs
microservices/_qazvin_megaforce_microservice/src/handlers/: tcp.rs
microservices/_qazvin_megaforce_microservice/src/utils/: parsy.rs  socky.rs
microservices/auth/: Cargo.toml
microservices/auth/migrations/00000000000000_diesel_initial_setup/: up.sql
microservices/auth/migrations/2021-06-19-134851_create_users/: down.sql  up.sql
microservices/auth/src/: entities.rs  main.rs  schema.rs
microservices/auth/src/entities/users/: api.rs  model.rs
microservices/auth/src/handlers/: db.rs  error.rs
microservices/auth/src/handlers/db/: pg.rs
microservices/auth/src/handlers/db/pg/: stablish.rs
microservices/device/: Cargo.toml  README.md
microservices/device/src/: handlers.rs  lib.rs  macros.rs  main.rs  schemas.rs  utils.rs
microservices/device/src/emulator/: main.rs
microservices/device/src/handlers/: tcp.rs  udp.rs
microservices/device/src/handlers/db/: cass.rs  pg.rs
microservices/device/src/handlers/db/cass/: establish.rs  node.rs  stablish.rs
microservices/device/src/handlers/db/pg/: establish.rs  stablish.rs
microservices/device/src/macros/: authenticity.rs
microservices/device/src/schemas/: device.rs
microservices/device/src/utils/: hexy.rs  parsy.rs  socky.rs
microservices/monitor/: Cargo.toml
microservices/monitor/src/: main.rs
microservices/report/: Cargo.toml
microservices/report/src/: main.rs
microservices/streamer/: Cargo.toml  README.md
microservices/streamer/src/publisher/: handlers.rs  main.rs
microservices/streamer/src/publisher/handlers/: db.rs  producer.rs
microservices/streamer/src/publisher/handlers/db/: cass.rs
microservices/streamer/src/publisher/handlers/db/cass/: establish.rs  stablish.rs
microservices/streamer/src/publisher/handlers/db/cass/schemas/: device.rs
microservices/streamer/src/publisher/handlers/db/pg/: stablish.rs
(+5 files in other folders)
