[package]
name = "device"
version = "0.1.0"
authors = ["wildonion <marefimoghaddam@unixerr.com>"]
edition = "2018"



[dependencies]
tokio = { version = "1.7.0", features = ["full"]  }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = "1.0.125"
serde_json = "1.0.64"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
cdrs-tokio = "4.0.0"
cdrs-tokio-helpers-derive = "3.0.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
actix-codec = "0.4"
actix-web = "3"
actix-web-actors = "3.0.0"
actix = "0.12.0"
log = "0.4.14"
dotenv = "0.15.0"
env_logger = "0.8.3"
listenfd = "0.3.3"
r2d2 = "0.8.9"
r2d2_postgres = "0.18.0"
hex = "0.4.3"



[[bin]]
name = "device"
path = "src/main.rs"


[[bin]]
name = "emulator"
path = "src/emulator/main.rs"
